--- a/data/BrazilPlates/tessdata_fast/BrazilPlates_1.595000_32_600.ocrevaluation.html
+++ b/data/BrazilPlates/tessdata_fast/BrazilPlates_1.595000_32_600.ocrevaluation.html
@@ -8,13 +8,13 @@
         <div>
             <table border="1">
                 <tr>
-                    <td>CER</td><td>0.24</td>
+                    <td>CER</td><td>0.48</td>
                 </tr>
                 <tr>
-                    <td>WER</td><td>0.48</td>
+                    <td>WER</td><td>1.92</td>
                 </tr>
                 <tr>
-                    <td>WER (order independent)</td><td>0.48</td>
+                    <td>WER (order independent)</td><td>1.92</td>
                 </tr>
             </table>
         </div>
@@ -29,7 +29,7 @@
                 </td>
             </tr>
             <tr>
-                <td>LHO9Y36 DLE2Q82 NEO9H53 JEK4P48 CVW2E81 RAB1B56 PIP8X23 FRS3M31 BEG7H23 QLD4J59 BNT6I71 FYY9G15 AOB1C23 FYH7D18 RUM5U30 BGT2Z27 JFR8J74 MUY8V69 EJA0U33 BOW0C68 JSW6J55 BVQ2Q20 CYX5P33 ORU1J34 EXN2R54 DOM6I78 OZA6S38 EEK6J75 EJG7F22 BKN2J54 ITT7G69 BQT5K64 BJR3Q93 FMG7S37 EAA2O86 MWV7T18 ENX6E08 BDO3K89 KWV1K12 POJ6H39 DJT8M77 BQK7S41 GON5I72 LNZ5F12 BLB1U48 NZB2H56 CJX4J81 AIG9G47 KYP4K44 OKZ0G33 MGS7L84 BCS2A56</td><td>LHO9Y36 DLE2Q82 NEO9H53 JEK4P48 CVW2E81 RAB1B56 PIP8X23 FRS3M31 BEG7H23 QLD4J59 BNT6I71 FYY9G15 AOB1C23 FYH7D18 RUM5U30 BGT2Z27 JFR8J74 MUY8V69 EJA0U33 BOW0C68 JSW6J55 BVQ2Q20 CYX5P33 ORU1J34 EXN2R54 DOM6I78 OZA6S38 EEK6J75 EJG7F22 BKN2J54 ITT7G69 BQT5K64 BJR3Q93 FMG7S37 EAA2<font style="background-color:aquamarine">0</font>O86 MWV7T18 ENX6E08 BDO3K89 KWV1K12 POJ6H39 DJT8M77 BQK7S41 GON5I72 LNZ5F12 BLB1U48 NZB2H56 CJX4J81 AIG9G47 KYP4K44 OKZ0G33 MGS7L84 BCS2A56</td>
+                <td>LHO9Y36 DLE2Q82 NEO9H53 JEK4P48 CVW2E81 RAB1B56 PIP8X23 FRS3M31 BEG7H23 QLD4J59 BNT6I71 FYY9G15 AOB1C23 FYH7D18 RUM5U30 BGT2Z27 JFR8J74 MUY8V69 EJA<span id="l147.147" onmouseout="document.getElementById('r147.147').style.background='none'" onmouseover="document.getElementById('r147.147').style.background='greenyellow'" title="Q"><font color="red">0</font></span>U33 BOW0C68 JSW6J55 BVQ2Q20 CYX5P33 ORU1J34 EXN2R54 DOM6I78 OZA6S38 EEK6J75 EJG7F22 BKN2J54 ITT7G69 BQT5K64 BJR3Q93 FMG7S37 EAA2O86 MWV7T18 ENX6E08 BDO3K89 KWV1K12 POJ6H39 DJT8M77 BQK7S41 GON5I72 LNZ5F12 BLB1U48 NZB2H56 CJX4J81 AIG9G47 KYP4K44 OKZ0G33 MGS7L84 BCS2A56</td><td>LHO9Y36 DLE2Q82 NEO9H53 JEK4P48 CVW2E81 RAB1B56 PIP8X23 FRS3M31 BEG7H23 QLD4J59 BNT6I71 FYY9G15 AOB1C23 FYH7D18 RUM5U30 BGT2Z27 JFR8J74 MUY8V69 EJA<span id="r147.147" onmouseout="document.getElementById('l147.147').style.background='none'" onmouseover="document.getElementById('l147.147').style.background='greenyellow'" title="0"><font color="red">Q</font></span>U33 BOW0C68 JSW6J55 BVQ2Q20 CYX5P33 ORU1J34 EXN2R54 DOM6I78 OZA6S38 EEK6J75 EJG7F22 BKN2J54 ITT7G69 BQT5K64 BJR3Q93 FMG7S37 EAA2<font style="background-color:aquamarine">0</font>O86 MWV7T18 ENX6E08 BDO3K89 KWV1K12 POJ6H39 DJT8M77 BQK7S41 GON5I72 LNZ5F12 BLB1U48 NZB2H56 CJX4J81 AIG9G47 KYP4K44 OKZ0G33 MGS7L84 BCS2A56</td>
             </tr>
         </table>
         <h2>Error rate per character and type</h2>
@@ -41,7 +41,7 @@
                 <td> </td><td>20</td><td>51</td><td>0</td><td>0</td><td>0</td><td>0.00</td>
             </tr>
             <tr>
-                <td>0</td><td>30</td><td>6</td><td>1</td><td>0</td><td>0</td><td>16.67</td>
+                <td>0</td><td>30</td><td>6</td><td>1</td><td>1</td><td>0</td><td>33.33</td>
             </tr>
             <tr>
                 <td>1</td><td>31</td><td>15</td><td>0</td><td>0</td><td>0</td><td>0.00</td>
